gw2_dashboard/src/App.css
/* ... */
.traitline {
  background-position: bottom left;
    position: relative;
    align-items: center;
    border:1px solid #303030;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    height: 140px;
    width: 650px;
    margin: 1% 0;
}

.line_icon {
  filter: drop-shadow(0px 0px 2px rgb(0, 0, 0));
  position: relative
}
.minor img, .weapon_trait{clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%); background: #00000023;}
.line_icon span {
  background: url('/images/trait-icon.png') no-repeat;
  background-size: cover;
  background-position: center;
  position: absolute;
  top: 0%;
  right: 34%;
  height: 100%;
  width: 40%;
}

.weapon_proficiency {
  position: absolute;
  bottom: 10%;
  left: 20%;
}
.trait_tier {
    display:flex;
    flex-direction: column;
}

.major[data-traiton=true] {
  filter: opacity(1) drop-shadow(0px 0px 4px rgb(255, 255, 255, 1)) !important;
}
.minor[data-traiton=true] {filter: opacity(1) drop-shadow(0px 0px 4px rgba(0, 0, 0, 1))}
.trait, .weapon_trait{
  margin: 1%;
  height: 35px;
  width: 32px;
  filter: opacity(.6) drop-shadow(0px 0px 4px rgba(0, 0, 0, 1));
}

.trait img {
  object-fit: cover;
}

.traitline_icon {
    display: flex;
    justify-content: center;
    align-items: center;
    flex: .5 0 auto;
    height: 100%;
    width: 12%;
}

.skill {
    height: 60px;
    width: 60px;
}

.inventory {
  max-width: 612px;
}
.bag {
    margin: 1% 0;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
}

.item {
    margin: 1.5px;
    display: flex;
    flex-direction: row-reverse;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    position: relative;
    cursor: default;
    img {
        height: 54px;
        width: 54px;
    }
    .count {
        position: absolute;
        bottom: 0;
        color: white;
        text-shadow: 0 0 3px black, 0 0 3px black, 0 0 3px black;
        margin: 0 5px;
        font-size: 13px;
    }
}

.icon {
    margin: 1.5px;
    height: 54px;
    width: 54px;
    border:1px solid #303030;
    background-color: rgba(0, 0, 0, 0.1);
}

.tool_tip {
    background-image: url("/images/tooltip_background.webp");
    background-color: rgba(0, 0, 0, 0.5);
    background-size: cover;
    background-repeat: repeat;
    font-family: "Lato", sans-serif;
    position: fixed;
    display: flex;
    z-index: 9;
    left: 5%;
    top:35%;
    flex-direction: column;
    padding: .5rem;
    max-width: 300px;
    color: white;
    border: 2px solid #ffffffc4;
    img {
        margin-right: 1rem;
    }
}

.tooltip_header {
    display: flex;
    align-items: center;
    border-bottom: lightgrey;
}

.tooltip_stats {
    display: flex;
    flex-direction: column;
    div{
        flex: 1;
    }
}

.tooltip_stats_header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    border-bottom: lightgrey;
}

.item_stats {
    display: flex;
    flex-direction: column;
    div {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }
}

.tooltip_label {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    div {
        display: flex;
    }
}

.achievement-container {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin: 0 auto;
    padding: 1%;
    border: 1px solid var(--dividerColor);
}

.achievement-header {
    display: flex;
    flex-direction: row;
    align-items: center;
    img {
        width: 35px;
        height: auto;
        margin-right: 1%;
    }
}
progress::-webkit-progress-bar {background: transparent;}
progress::-webkit-progress-value {background: var(--progress);}



/* sprites */
.sprite-characters, .sprite-crafting, .sprite-equipment, .sprite-inventory, .sprite-map-completion, .sprite-journal, .sprite-build, .sprite-Power, .sprite-Toughness, .sprite-Vitality, .sprite-Precision, .sprite-Ferocity, .sprite-ConditionDamage, .sprite-ConditionDuration, .sprite-AgonyResistance, .sprite-Concentration, .sprite-Expertise, .sprite-Armor, .sprite-Health, .sprite-CritChance, .sprite-CritDamage, .sprite-HealingPower, .sprite-BoonDuration,
.sprite-bank, .sprite-wallet, .sprite-copper, .sprite-silver, .sprite-gold, .sprite-achievements, .sprite-achievement-big, .sprite-achievement-icon {
    background-image: url(/images/sprites.png);
    background-repeat: no-repeat;
    display: inline-block;
    position: relative;
    top: 3px;
}

.sprite-characters {
    background-position: -364px -148px;
    height: 18px;
    width: 18px;
}

.sprite-equipment {
    background-position: -238px -224px;
    height: 28px;
    width: 28px;
}

.sprite-inventory {
    background-position: -304px -60px;
    height: 28px;
    width: 28px;
}

.sprite-build {
    background-position: -334px 0;
    height: 28px;
    width: 28px;
}

.sprite-crafting {
    background-position: -204px -190px;
    height: 28px;
    width: 28px;
}

.sprite-journal {
    background-position: -300px -292px;
    height: 28px;
    width: 28px;
}

.sprite-map-completion {
    background-position: -304px -90px;
    height: 28px;
    width: 28px;
}

.sprite-bank {
    background-position: -364px -128px;
    height: 18px;
    width: 18px;
}

.sprite-wallet {
    background-position: -298px -347px;
    height: 18px;
    width: 18px;
}

.sprite-copper {
    background-position: -60px -389px;
    height: 18px;
    width: 18px;
}

.sprite-silver {
    background-position: -40px -489px;
    height: 18px;
    width: 18px;
}

.sprite-gold {
    background-position: -464px -180px;
    height: 18px;
    width: 18px;
}

.sprite-achievements {
    background-position: -364px -108px;
    height: 18px;
    width: 18px;
}

.sprite-achievement-big {
    background-position: -304px -270px;
    height: 20px;
    width: 20px;
}

.sprite-achievement-icon {
    background-position: -544px -270px;
    height: 15px;
    width: 15px;
}

.sprite-Power {
    background-position: -34px -190px;
    height: 32px;
    width: 32px;
}
/* ... */

